--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "aether_compiler"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "bootstrap_gen"
+path = "src/bootstrap_gen.rs"
+
 [dependencies]
 bincode = "1.3.3"
 serde = { version = "1.0.228", features = ["derive"] }
