--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,16 @@ path = "src/bin/run_aec.rs"
 name = "cube_gen"
 path = "src/bin/cube_gen.rs"
 
+[[bin]]
+name = "audio_test_gen"
+path = "src/bin/audio_test_gen.rs"
+
 [dependencies]
 bincode = "1.3.3"
 bytemuck = "1.25.0"
+cpal = "0.17.3"
 pollster = "0.4.0"
+rand = "0.10.0"
 serde = { version = "1.0.228", features = ["derive"] }
 wgpu = "0.20"
 winit = "0.29"
